--- a/FoodScanner/app/src/main/res/layout/activity_login.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,14 @@
                 android:layout_height="match_parent"
                 android:background="@color/Primary">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:layout_centerHorizontal="true"
-        android:textSize="30sp"
-        android:textColor="@color/White"
-        android:text="$FoodScannerLogo"
         android:layout_above="@+id/login_button_layout"
-        />
+        android:src="@drawable/ic_launcher"
+        android:id="@+id/imageView_logo"/>
 
     <LinearLayout
         android:id="@id/login_button_layout"
