--- a/FoodScanner/app/src/main/res/layout/tutorial_page.xml
+++ b/FoodScanner/app/src/main/res/layout/tutorial_page.xml
@@ -68,8 +68,8 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     style="?android:attr/borderlessButtonStyle"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/Text.Primary"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
+                    android:textColor="@color/Borderless.Button.Text"
                     android:text="@string/tutorial_back"/>
 
                 <Button
@@ -77,8 +77,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="?android:attr/borderlessButtonStyle"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/Text.Primary"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
+                    android:textColor="@color/Borderless.Button.Text"
                     android:text="@string/tutorial_next"/>
 
             </LinearLayout>
