--- a/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
@@ -6,24 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="senior_project.foodscanner.activities.MealDetailsActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Scan Food"
-        android:id="@+id/button_foodscanner"
-        android:layout_marginRight="45dp"
-        android:layout_marginEnd="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner_meal"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/button_foodscanner"
-        android:layout_alignStart="@+id/button_foodscanner" />
+        android:layout_toRightOf="@+id/button_addfood"
+        android:layout_toEndOf="@+id/button_addfood" />
 
     <Button
         android:layout_width="wrap_content"
@@ -31,10 +20,7 @@
         android:text="Add Food"
         android:id="@+id/button_addfood"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="45dp"
-        android:layout_marginStart="45dp" />
+        android:layout_centerHorizontal="true" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -43,8 +29,7 @@
         android:layout_below="@+id/spinner_meal"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/button_foodscanner"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp" />
+        android:layout_above="@+id/button_addfood" />
 
 </RelativeLayout>
