--- a/FoodScanner/app/src/main/res/layout/food_density_dialog.xml
+++ b/FoodScanner/app/src/main/res/layout/food_density_dialog.xml
@@ -11,45 +11,15 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_marginBottom="14dp"
-        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textAppearance="@android:style/TextAppearance.Medium"
         android:textColor="@color/Text.Primary"
-        android:text="Density Info"
-        android:gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/densityValue"
+        android:text="Pick the closest match"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal" />
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
-        android:textColor="@color/Text.Primary"
-        android:text="Value: Find density entry below."
-        android:gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/densityEntry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
-        android:textColor="@color/Text.Primary"
-        android:text="Entry: Find density entry below."
-        android:gravity="center_horizontal" />
-    <AutoCompleteTextView
-        android:id="@+id/densitySearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
-        android:textColor="@color/Text.Primary"
-        android:hint="Generic name of food item"
-        android:layout_gravity="center_horizontal"
-        android:singleLine="true" />
+        android:id="@+id/listView_densities"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
