--- a/FoodScanner/app/src/main/res/layout/tutorial_page.xml
+++ b/FoodScanner/app/src/main/res/layout/tutorial_page.xml
@@ -43,6 +43,16 @@
                 android:textColor="@color/Text.Secondary"
                 android:includeFontPadding="false"/>
 
+            <ImageView
+                android:id="@+id/image"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="100dp"
+                android:maxHeight="100dp"
+                android:layout_margin="16dp"
+                android:contentDescription="@null"/>
+
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
@@ -58,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="right"
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="8dp">
 
@@ -65,8 +76,6 @@
                     android:id="@+id/button_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
                     style="?android:attr/borderlessButtonStyle"
                     android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                     android:textColor="@color/Borderless.Button.Text"
@@ -76,6 +85,8 @@
                     android:id="@+id/button_next"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     style="?android:attr/borderlessButtonStyle"
                     android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                     android:textColor="@color/Borderless.Button.Text"
