--- a/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
+++ b/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
@@ -17,21 +17,21 @@
         android:layout_alignBottom="@+id/meal_text"
         android:visibility="visible"/>
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/meal_text"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:textAppearance="@android:style/TextAppearance.Medium"
-              android:textColor="@color/Text.Secondary"
-              android:gravity="center_vertical"
-              android:paddingLeft="6dip"
-              android:paddingRight="6dip"
-              android:minHeight="?android:attr/listPreferredItemHeightSmall"
-              android:text="Meal Item"
-              android:layout_toRightOf="@+id/imageButton_warning"
-              android:layout_alignParentTop="true"
-              android:visibility="visible"
-              android:layout_toLeftOf="@+id/textView_nutr"/>
+    <TextView
+        android:id="@+id/meal_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@color/Text.Secondary"
+        android:gravity="center_vertical"
+        android:paddingLeft="6dip"
+        android:paddingRight="6dip"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:text="Meal Item"
+        android:layout_toRightOf="@+id/imageButton_warning"
+        android:layout_alignParentTop="true"
+        android:visibility="visible"
+        android:layout_toLeftOf="@+id/textView_nutr"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,8 @@
         android:gravity="center_vertical|right"
         android:paddingLeft="6dip"
         android:paddingRight="6dip"
-        android:text="0 cal"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:text="0 Cal"
         android:id="@+id/textView_nutr"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/button_delete"
