Basis for server syncing

--- a/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
@@ -159,4 +159,20 @@
         </LinearLayout>
 
     </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/loading"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_gravity="center"
+            android:background="@drawable/progress_background"
+            android:padding="15dp"/>
+    </FrameLayout>
+
 </RelativeLayout>
