--- a/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
@@ -66,13 +66,19 @@
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/container_meals"
+            android:layout_below="@+id/container_date">
+
         <ListView
             android:id="@+id/listView_meals"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/container_warning"
-            android:layout_below="@+id/container_date"
-            android:background="@drawable/background_add_meal"/>
+            android:background="@drawable/background_add_meal"
+            android:layout_alignParentTop="true"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -158,21 +164,25 @@
 
         </LinearLayout>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/loading"
+            android:visibility="gone"
+            android:background="#80ffffff"
+            >
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar"
+                android:layout_gravity="center"
+                android:background="@drawable/progress_background"
+                android:padding="15dp"/>
+        </FrameLayout>
+
+        </RelativeLayout>
+
     </RelativeLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/loading"
-        android:visibility="gone">
-
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center"
-            android:background="@drawable/progress_background"
-            android:padding="15dp"/>
-    </FrameLayout>
 
 </RelativeLayout>
