--- a/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
@@ -87,7 +87,7 @@
             android:layout_alignParentStart="true"
             android:id="@+id/container_warning"
             android:layout_above="@+id/container_total"
-            android:background="@color/Warning"
+            android:background="@color/Syncing"
             android:padding="10dp"
             >
 
@@ -97,18 +97,27 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center">
 
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progressBar_syncing"
+                    android:visibility="visible"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_gravity="center_vertical"/>
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageView_icon"
                     android:src="@android:drawable/ic_dialog_alert"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_gravity="center_vertical"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Meals are not synced with the server!"
-                    android:id="@+id/textView2"
+                    android:text="Syncing meals with server..."
+                    android:id="@+id/textView"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_gravity="center_vertical"
