--- a/FoodScanner/app/src/main/res/values/colors.xml
+++ b/FoodScanner/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="AccentOLD">#FF5252</color>
 
     <color name="Warning">#DFDF00</color>
+    <color name="Syncing">#649aff</color>
 
     <color name="Text.Primary">#212121</color>
     <color name="Text.Primary.Disabled">#8A8A8A</color>
