--- a/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
@@ -116,7 +116,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Syncing meals with server..."
+                    android:text="Sync in progress..."
                     android:id="@+id/textView"
                     android:textStyle="bold"
                     android:textAlignment="center"
