--- a/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
@@ -1,15 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="senior_project.foodscanner.activities.MealDetailsActivity">
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner_meal"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="35dp"
         android:layout_toEndOf="@+id/button_total_meal"
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:text="Total"
         android:id="@+id/button_total_meal"
-        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="36dp"
         android:layout_marginStart="20dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -36,6 +37,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="15dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_above="@+id/button_total_meal"
         android:background="@drawable/background_add_food" />
 
@@ -44,6 +47,7 @@
         android:layout_height="wrap_content"
         android:text="Finish"
         android:id="@+id/button_finish"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginRight="20dp"
         android:layout_marginEnd="20dp"
         android:layout_alignParentBottom="true"
@@ -57,6 +61,7 @@
         android:textColor="@color/Text.Primary"
         android:text="Meal Date"
         android:id="@+id/textView_date"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/button_total_meal"
         android:layout_alignStart="@+id/button_total_meal"
