Added CameraActivity Tutorial.
Setup the tutorial inside the CameraActivity. Changed the intent method to provide a constant that decides which tutorial will be used (only 1 for this project).

--- a/FoodScanner/app/src/main/res/layout/activity_camera.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_camera.xml
@@ -28,6 +28,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:id="@+id/imageButton_help"
         android:layout_gravity="right|bottom"
         android:src="@android:drawable/ic_menu_help"
